# collatz_checker

./: CMakeLists.txt  main.cpp
cmake/: FindGMP.cmake  FindParallelExecutorWithMaxPendingTasks.cmake
